Add is_empty for checkout in cart_sidebar [cart]

--- a/cart/templates/cart/cart_sidebar.html
+++ b/cart/templates/cart/cart_sidebar.html
@@ -38,7 +38,9 @@
                 <div class="mini-cart__buttons">
                     <a href="{% url 'cart:cart_detail' %}"
                        class="btn btn-fullwidth btn-bg-sand mb--20">{% trans 'Go to cart' %}</a>
-                    <a href="checkout.html" class="btn btn-fullwidth btn-bg-sand">{% trans 'Checkout' %}</a>
+                    {% if not cart.is_empty %}
+                        <a href="{% url 'orders:order_create' %}" class="btn btn-fullwidth btn-bg-sand">{% trans 'Checkout' %}</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
